# dtu_mlops_group_61

./: .gcloudignore  .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  data.dvc  docker.dockerfile  evaluate_model.dockerfile  new_requirements.txt  predict_model.dockerfile  pyproject.toml  report.md  report.py  requirements.txt  setup.py  sweep_model.dockerfile  train.dockerfile  train_model.dockerfile  whodup.txt
.dvc/: config
.github/workflows/: cml_data.yaml  cml_data.yml  flake8.yml  isort.yml  pre-commit.yml  stage_model.yaml  tests.yml
configs/: tox.ini
data/processed/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/processed/validation/: data-00000-of-00001.arrow  state.json
data/raw/train.arrow/: cache-2ef962e615e3b082.arrow  cache-6205c16eaea9ac84.arrow  state.json
data/raw/validation.arrow/: cache-47684c60079d2f9f.arrow  cache-6d8c520bcc81dd13.arrow  data-00000-of-00001.arrow  state.json
dockerfiles/: predict gpu.dockerfile  predict.dockerfile  trainer gpu.dockerfile  trainer.dockerfile
profiling/: profile.prof
reports/: README.md
src/data/: data.py  make_dataset.py
src/models/: evaluate_model.py  model.py  predict_model.py  sweep_model.py  train_model.py
src/models/config/: default_params.yaml  sweep_config.yaml
src/models/wandb/: latest-run
src/models/wandb/run-20250118_103727-5w4aoqa0/: run-5w4aoqa0.wandb
tests/: test_api.py  test_dataset.py  test_model.py  test_train.py
