[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu_mlops_group_61"
version = "0.0.1"

authors = [
  { name = "Magnus Bengtsson", email = "s216169@dtu.dk" },
  { name = "Peter Gründer", email = "s214987@dtu.dk" },
  { name = "Alexander Jeppsson", email = "s215002@dtu.dk" },
]
keywords = ["MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
description = "Exam project for course 02476 MLOps at DTU"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements_dev.txt"]}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
data = "src.data.data:download_and_reduce_wmt19"
